  of filenames by using the '-n' flag.  For instance:

A: [ -n B ] { ... } 
>B { find ... }

In this example, the file 'B' is generate by a 'find' command that
outputs on filename per line.  Stu will then interpret each file
contained in 'B' as a dependency of 'A'. 

2016-08-26  Version 2.1.4

* There is now a new option '-Y' to turn on color output
  unconditionally.  

2016-08-25  Version 2.1

See 'MIGRATION'

2016-07-29  Version 1.15.80:

* "Existence-only" dependencies are renamed to "timestamp-ignoring"
  dependencies.  The syntax is not changed.  

2016-05-18  Version 1.15:

* Arguments to Stu outside of options are now parsed in a simplified
  syntax in which only the characters '!?&@[]' retain their special
  meaning.  To pass dependencies in full Stu syntax, the option -C can
  be used, as in previous versions. 

2016-05-15  Version 1.14:

* Rules with multiple targets are possible, as in

A B C: X Y { # Build A B C }

This would previously have been written as

A: X Y { # Build A B C }
B: A;
C: A;

with the difference that using the new form, Stu will rebuild 'B' and
'C' when any of these has been removed. 

* In the error message for cyclic dependencies, Stu doesn't show anymore
  how each target was instantiated if it was dynamic, in consistence
  with other error messages
* In the error message for cyclic dependencies, Stu now also shows the
  trace from the cycle to the top-level target
* "Phony targets" were renamed to "transient targets" 
* The default compilation mode is now -O2 instead of -O3

The old form is still valid. 

2016-05-01  Version 1.13:

* Dynamic phonies are now allowed.  The following is an example:

A :  [@x] { cp C A }
@x : B;
B = {C}
C = {correct}

This will create a file 'A' containing the text 'correct'. 

2016-04-26  Version 1.12:

* Copy rules:

A = B;

This will copy the file 'B' to 'A'.  This can be used with '!' and '&',
but not with '?':

A = !B;
A = &B;
A = directory/;
